tests/ui/offset-of/offset-of-enum.stderr
error[E0573]: expected type, found variant `Alpha::One`
  --> $DIR/offset-of-enum.rs:11:16
   |
LL |     offset_of!(Alpha::One, 0);
   |                ^^^^^^^^^^
   |                |
   |                not a type
   |                help: try using the variant's enum: `Alpha`

error[E0609]: no field `Two` on type `Alpha`
  --> $DIR/offset-of-enum.rs:12:23
   |
LL |     offset_of!(Alpha, Two.0);
   |                       ^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0573, E0609.
For more information about an error, try `rustc --explain E0573`.
